--- a/app/views/customer/visited_logs/_form.html.erb
+++ b/app/views/customer/visited_logs/_form.html.erb
@@ -7,14 +7,14 @@
             <h3 class="card-title">履歴情報を入力してください。 <small></small></h3>
           </div>
 
-          <%= form_with(model: visited_log, url: url, local: true) do |form| %>
+          <%= form_with(model: visited_log, url: url, local: true) do |f| %>
             <div class="card-body">
-              <%= form.label :year do '来店日付' end %>
+              <%= f.label :year do '来店日付' end %>
               <div class="form-group">
                 <% visited_date_err = true if visited_log.errors.include?(:visited_date) %>
-                <%= form.select :year, ((Date.today - 1.year).year.to_i..Date.today.year.to_i).each{|num| num.to_s.rjust(2, '0') }, { include_blank: '年' }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
-                <%= form.select :month, (1..12).map{|num| num.to_s.rjust(2, '0') }, { include_blank: '月' }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
-                <%= form.select :day, (1..31).map{|num| num.to_s.rjust(2, '0') }, { include_blank: '日' }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
+                <%= f.select :year, ((Date.today - 1.year).year.to_i..Date.today.year.to_i).each{|num| num.to_s.rjust(2, '0') }, { include_blank: '年' }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
+                <%= f.select :month, (1..12).map{|num| num.to_s.rjust(2, '0') }, { include_blank: '月' }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
+                <%= f.select :day, (1..31).map{|num| num.to_s.rjust(2, '0') }, { include_blank: '日' }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
                 <% if visited_date_err %>
                   <span class="error invalid-feedback"><%= visited_log.errors.full_messages_for(:visited_date).first %></span>
                 <% end %>
@@ -22,7 +22,7 @@
             </div>
 
             <div class="card-footer">
-              <%= form.submit class: 'btn btn-primary', data: { confirm: 'よろしいですか?' } %>
+              <%= f.submit class: 'btn btn-primary', data: { confirm: 'よろしいですか?' } %>
               <%= link_to('　削除　', customer_visited_log_path(company_code: @company.code, customer_id: visited_log.customer_id, id: visited_log.id), method: :delete, class: 'btn btn-sm btn-danger float-right', data: { confirm: "削除してよろしいですか？" }) if visited_log.persisted? %>
             </div>
           <% end %>
