--- a/app/views/customers/_form_tel_number.html.erb
+++ b/app/views/customers/_form_tel_number.html.erb
@@ -7,28 +7,28 @@
             <h3 class="card-title">電話番号を入力してください。 <small></small></h3>
           </div>
 
-          <%= form_with(model: customer, url: url, local: true) do |form| %>
+          <%= form_with(model: customer, url: url, local: true) do |f| %>
             <div class="card-body">
               <div class="form-group">
                 <% tel_number_err = true if customer.errors.include?(:tel_number) %>
-                <%= form.label :tel_number, { class: "#{ tel_number_err ? 'is-invalid' : '' }" } %>
+                <%= f.label :tel_number, { class: "#{ tel_number_err ? 'is-invalid' : '' }" } %>
                 <div class="form-row align-items-center">
                   <div class="col-3">
-                    <%= form.telephone_field :tel_number1, {
+                    <%= f.telephone_field :tel_number1, {
                       maxlength:3,
                       class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
                       onKeyup: "this.value=this.value.replace(/[^0-9]+/i,''); nextField(this, 'customer_tel_number2', 3)"
                     } %>
                   </div>
                   <div class="col-3">
-                    <%= form.telephone_field :tel_number2, {
+                    <%= f.telephone_field :tel_number2, {
                       maxlength:4,
                       class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
                       onKeyup: "this.value=this.value.replace(/[^0-9]+/i,''); nextField(this, 'customer_tel_number3', 4)"
                     } %>
                   </div>
                   <div class="col-3">
-                    <%= form.telephone_field :tel_number3, {
+                    <%= f.telephone_field :tel_number3, {
                       maxlength:4,
                       class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
                       onKeyup: "this.value=this.value.replace(/[^0-9]+/i,'')"
@@ -40,7 +40,7 @@
             </div>
 
             <div class="card-footer">
-              <%= form.submit class: 'btn btn-primary', value: '次へ' %>
+              <%= f.submit class: 'btn btn-primary', value: '次へ' %>
             </div>
           <% end %>
         </div>
