--- a/app/views/customers/_form_tel_number.html.erb
+++ b/app/views/customers/_form_tel_number.html.erb
@@ -40,7 +40,7 @@
             </div>
 
             <div class="card-footer">
-              <%= f.submit class: 'btn btn-primary', value: '次へ' %>
+              <%= f.submit class: 'btn btn-primary', value: '次へ', data: { disable_with: '　送信中...　' } %>
             </div>
           <% end %>
         </div>
