--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,7 +30,7 @@
             </div>
 
             <div class="card-footer">
-              <%= f.submit class: 'btn btn-primary', data: { confirm: 'よろしいですか?' } %>
+              <%= f.submit class: 'btn btn-primary', data: { confirm: '送信してよろしいですか?', disable_with: '　送信中...　' } %>
             </div>
           <% end %>
         </div>
