--- a/app/views/customer/visited_logs/_form.html.erb
+++ b/app/views/customer/visited_logs/_form.html.erb
@@ -9,7 +9,7 @@
 
           <%= form_with(model: visited_log, url: url, local: true) do |f| %>
             <div class="card-body">
-              <%= f.label :year do '来店日付' end %>
+              <%= f.label :visited_date %>
               <div class="form-group">
                 <% visited_date_err = true if visited_log.errors.include?(:visited_date) %>
                 <%= f.select :year, ((Date.today - 1.year).year.to_i..Date.today.year.to_i).each{|num| num.to_s.rjust(2, '0') }, { include_blank: false }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
@@ -23,7 +23,7 @@
 
             <div class="card-footer">
               <%= f.submit class: 'btn btn-primary', data: { confirm: '送信してよろしいですか?', disable_with: '　送信中...　' } %>
-              <%= link_to('　削除　', customer_visited_log_path(company_code: @company.code, customer_id: visited_log.customer_id, id: visited_log.id), method: :delete, class: 'btn btn-sm btn-danger float-right', data: { confirm: "削除してよろしいですか？" }) if visited_log.persisted? %>
+              <%= link_to('　削除　', customer_visited_log_path(company_code: @company.code, customer_id: visited_log.customer_id, id: visited_log.id), method: :delete, class: 'btn btn-sm btn-danger float-right', data: { confirm: '削除してよろしいですか？' }) if visited_log.persisted? %>
             </div>
           <% end %>
         </div>
