--- a/app/views/customer/visited_logs/new.html.erb
+++ b/app/views/customer/visited_logs/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark"><%= Const::View::Name::VISITED_LOG %></h1>
+        <h1 class="m-0 text-dark"><%= t('.header_title') %></h1>
       </div>
 
       <div class="col-sm-6">
